--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Hello I am Jaylin</h1>
+<ol>
+    <div>This is my ordered list</div>
+    <li>
+        <div>This is my Kpop list</div>
+        <ul>
+            <li>Twice</li>
+            <li>Blackpink</li>
+        </ul>
+    </li>
+    <li>
+        <div>This is my fruit list</div>
+        <ul>
+            <li>Grape</li>
+            <li>Watermelon</li>
+        </ul>
+    </li>
+</ol>
