--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
+<h1>This is my ordered list</h1>
 <ol>
-    <div>This is my ordered list</div>
-    <li>
-        <div>This is my Kpop list</div>
+    <li>This is my Kpop list
         <ul>
             <li>Twice</li>
             <li>Blackpink</li>
+            <li>Exo</li>
         </ul>
     </li>
-    <li>
-        <div>This is my fruit list</div>
+    <li>This is my fruit list
         <ul>
             <li>Grape</li>
             <li>Watermelon</li>
